# Agent-1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-binaries.yml
data/: .keep
scripts/: bootstrap.ps1  bootstrap.sh  build_binary.ps1  build_binary.sh  import_openclaw_profile.py  install-web.ps1  install.ps1  install.sh  setup_google_calendar.py
src/agent1/: approvals_bridge.py  config.py  dashboard.py  dashboard_state.py  dashboard_ui.py  diagnostics.py  home_layout.py  llm.py  logging_setup.py  main.py  migrations.py  policy.py  prompts.py  provider_router.py  service_manager.py  session_engine.py  usage_meter.py  workspace_profile.py
src/agent1/agents/: __init__.py  orchestrator.py
src/agent1/cli/: __init__.py  approvals.py  init.py  onboard.py  parity.py
src/agent1/integrations/: __init__.py  bridge_webhook.py  discord_bot.py  slack_bot.py  telegram_bot.py  whatsapp_bot.py
src/agent1/interfaces/: __init__.py  base.py
src/agent1/memory/: __init__.py  chroma_store.py  manager.py  markdown_store.py
src/agent1/plugins/: __init__.py  manager.py
src/agent1/scheduler/: __init__.py  proactive.py
src/agent1/tools/: __init__.py  approval.py  calendar_tool.py  email_tool.py  loader.py  registry.py  safe_files.py  safe_shell.py  web_tools.py
workspace/: .keep
